Edit Home and ChildProfiles view

--- a/Duckie/Views/Home/Index.cshtml
+++ b/Duckie/Views/Home/Index.cshtml
@@ -1,8 +1,38 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Duckie: A Keepsake App for Parents";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="d-flex flex-column text-center">
+    <h1>A Keepsake App for Parents</h1>
+    <p class="w-75 m-auto pb-5">Experience the joy of parenthood without missing a beat. Duckie helps you simplify, organize, and preserve every precious memory of your child's life.</p>
+</div>
+
+<div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+        <div class="card text-dark bg-light mb-3">
+            <div class="card-header">Key feature no.1</div>
+            <div class="card-body">
+                <h5 class="card-title">Capture special memories and thoughts</h5>
+                <p>Use the journal feature to record how you felt and what happened during those special moments in your child's life.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card text-dark bg-light mb-3">
+            <div class="card-header">Key feature no.2</div>
+            <div class="card-body">
+                <h5 class="card-title">Celebrate milestones and achievements</h5>
+                <p>Keep a detailed record of important dates and the significant milestones your child has achieved throughout the years.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card text-dark bg-light mb-3">
+            <div class="card-header">Key feature no.3</div>
+            <div class="card-body">
+                <h5 class="card-title">One app to store it all</h5>
+                <p>Stay organized and easily keep track of all child-related information in a single app that you can pass on to your child as a cherished digital legacy.</p>
+            </div>
+        </div>
+    </div>
 </div>
