--- a/Duckie/Views/Shared/_Layout.cshtml
+++ b/Duckie/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Duckie</title>
+    <title>@ViewData["Title"] - Duckie: A Keepsake App for Parents</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Duckie.styles.css" asp-append-version="true" />
@@ -20,10 +20,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ChildProfiles" asp-action="Index">Children</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Milestones" asp-action="Index">Milestones</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Journals" asp-action="Index">Journal</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -31,7 +34,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container py-5">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
