--- a/Duckie/Views/Home/Index.cshtml
+++ b/Duckie/Views/Home/Index.cshtml
@@ -4,13 +4,16 @@
 
 <div class="d-flex flex-column text-center">
     <h1>A Keepsake App for Parents</h1>
-    <p class="w-75 m-auto pb-5">Experience the joy of parenthood without missing a beat. Duckie helps you simplify, organize, and preserve every precious memory of your child's life.</p>
+    <p class="w-75 m-auto">Experience the joy of parenthood without missing a beat. Duckie helps you simplify, organize, and preserve every precious memory of your child's life.</p>
 </div>
 
-<di class="key-grid">
+<div class="container my-5">
+    <img src="~/img/mom-dad-moments.png" alt="Mom and Dad Moments" class="home-img" />
+</div>
+
+<div class="key-grid">
     <div class="key-1">
         <div class="app-features mb-3">
-            <div class="card-chip"><p><small>Key feature no.1</small></p></div>
             <div>
                 <h5>Capture special memories and thoughts</h5>
                 <p>Use the journal feature to record how you felt and what happened during those special moments in your child's life.</p>
@@ -19,7 +22,6 @@
     </div>
     <div class="key-2">
         <div class="app-features mb-3">
-            <div class="card-chip"><p><small>Key feature no.1</small></p></div>
             <div>
                 <h5>Celebrate milestones and achievements</h5>
                 <p>Keep a detailed record of important dates and the significant milestones your child has achieved throughout the years.</p>
@@ -28,10 +30,9 @@
     </div>
     <div class="key-3">
         <div class="app-features mb-3">
-            <div class="card-chip"><p><small>Key feature no.1</small></p></div>
             <div>
-            <h5>One app to store it all</h5>
-            <p>Stay organized and easily keep track of all child-related information in a single app that you can pass on to your child as a cherished digital legacy.</p>
+                <h5>One app to store it all</h5>
+                <p>Stay organized and easily keep track of all child-related information in a single app that you can pass on to your child as a cherished digital legacy.</p>
             </div>
         </div>
     </div>
