--- a/Duckie/Views/Shared/_Layout.cshtml
+++ b/Duckie/Views/Shared/_Layout.cshtml
@@ -12,9 +12,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light px-3 my-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Duckie</a>
+                <img src="~/img/duckie-logo.svg" alt="Duckie Logo" class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" />
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,8 @@
             </div>
         </nav>
     </header>
-    <div class="container py-5">
+
+    <div class="container my-5 py-5">
         <main role="main" class="pb-3 mb-5">
             @RenderBody()
         </main>
