Favicon and photo credits

--- a/Duckie/Views/Home/Index.cshtml
+++ b/Duckie/Views/Home/Index.cshtml
@@ -9,6 +9,9 @@
 
 <div class="container my-5">
     <img src="~/img/mom-dad-moments.png" alt="Mom and Dad Moments" class="home-img" />
+    <!-- Photo credit from Pexels:
+        Father-son - https://www.pexels.com/photo/father-teaching-his-son-how-to-ride-a-bike-5792901/
+        Mother-daughter - https://www.pexels.com/photo/mother-playing-with-daughter-on-sofa-4868538/ -->
 </div>
 
 <div class="key-grid">
