--- a/Duckie/Views/Shared/_Layout.cshtml
+++ b/Duckie/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light px-3 my-3">
             <div class="container-fluid">
-                <img src="~/img/duckie-logo.svg" alt="Duckie Logo" class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" />
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/img/duckie-logo.svg" alt="Duckie Logo" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
