--- a/Duckie/Views/Milestones/Edit.cshtml
+++ b/Duckie/Views/Milestones/Edit.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="MilestoneID" />
             <div class="form-group">
@@ -29,8 +29,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Photo" class="control-label"></label>
-                <input asp-for="Photo" class="form-control" />
+                <input asp-for="Photo" class="form-control" type="file" />
                 <span asp-validation-for="Photo" class="text-danger"></span>
+                <input type="hidden" name="ExisitingPhoto" value="@Model.Photo" />
             </div>
             <div class="form-group">
                 <label asp-for="ChildProfileId" class="control-label"></label>
