--- a/Duckie/Views/Shared/_Layout.cshtml
+++ b/Duckie/Views/Shared/_Layout.cshtml
@@ -22,9 +22,12 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ChildProfiles" asp-action="Index">Children</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ChildProfiles" asp-action="Index">Children</a>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Milestones" asp-action="Index">Milestones</a>
                         </li>
