--- a/Duckie/wwwroot/css/site.css
+++ b/Duckie/wwwroot/css/site.css
@@ -3,9 +3,9 @@ html {
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
@@ -29,6 +29,21 @@ body {
 
 .preview {
     width: 100%;
-    object-fit: contain;
+    height: 15vw;
+    object-fit: cover;
     margin-bottom: 12px;
+    border: 12px solid rgba(255, 255, 255, 0.3);
+    border-radius: 8px;
+}
+
+@media (max-width: 992px) {
+    .preview {
+        min-height: 40vw;
+    }
+}
+
+@media (max-width: 768px) {
+    .preview {
+        min-height: 50vw;
+    }
 }
